--- a/libloader/ChangeLog
+++ b/libloader/ChangeLog
@@ -2,14 +2,15 @@
 1.  WHAT's NEW
 ---------------
 
-LibLoader is still in the early development stage. Expect a detailed change log
-once we've reached version 0.2.0.
-
 A list of changes in recent versions:
+0.2.0:  (03-Dec-2006)
+        * This is the first real release version of LibLoader. At this
+          point this library has some primitive caching and does a good
+          job at loading resources.
 
 0.1.5: (26-Sep-2006)
         * Limited the size of resources that are held in memory to 512kb.
-          
+
 0.1.4: (31-Aug-2006)
 0.1.3: (30-Jul-2006)
 0.1.2: (30-May-2006)
