--- a/liblayout/ChangeLog
+++ b/liblayout/ChangeLog
@@ -3,10 +3,17 @@
 ---------------
 A list of changes in recent versions:
 
-0.1.3: 
-        * The renderer pipeline has been replaced by a faster implementation. The 
+0.2.0: (03-Dec-2006)
+        * HTML, Graphics2D and PDF output.
+
+        * Counters and strings support.
+
+        * Page-header and -footer are implemented (in a very simple way). 
+
+0.1.3: (29-Sep-2006)
+        * The renderer pipeline has been replaced by a faster implementation. The
           new phased renderer defines clearly separated processing steps and improves
-          caching and scaling. It also removes a lot of unneccessary and weird 
+          caching and scaling. It also removes a lot of unneccessary and weird
           computations, which slowed down the rendering process without providing
           any real value.
 
@@ -17,7 +24,7 @@ A list of changes in recent versions:
 0.1.1: (30-Apr-2006)
         * LibLayout now depends on a modified version of flute - W3C's CSS-Parser.
           Our version has improved namespace awareness, while maintaining backward
-          compatiblity with the original semantics (to allow co-existence with 
+          compatiblity with the original semantics (to allow co-existence with
           BIRT). The stylesheets provided in LibLayout will not work properly with
           an unpatched version of the parser.
 
