changed the project URL to the new homepage

--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -3,7 +3,7 @@
 ---------------
 A list of changes in recent versions:
 0.9.0:    (3-Dec-2006)
-        * New: Everything!
+        * What's new: Everything!
 
           - SubReports, FormulaSupport, Complex Layouts, Elements that can
             span more than one page - we got 'em all.
